[gd_scene load_steps=12 format=3 uid="uid://dat2u00x57fvm"]

[ext_resource type="Script" path="res://scenes/crystal_room.gd" id="1_iejj8"]
[ext_resource type="Texture2D" uid="uid://cky7lf7txge7q" path="res://scenes/Crystal_Floor_-_Layout.png" id="2_5ic37"]
[ext_resource type="PackedScene" uid="uid://dtaw7itrwnc6x" path="res://characters/ben.tscn" id="3_p2phy"]
[ext_resource type="PackedScene" uid="uid://cq5j4gjiqd00g" path="res://timers/clock_timer.tscn" id="4_i0q6g"]
[ext_resource type="PackedScene" uid="uid://c2c43lta2a3ll" path="res://scenes/pause_menu.tscn" id="5_koav6"]
[ext_resource type="PackedScene" uid="uid://d3sfqwsvo7etk" path="res://inventory/inventory.tscn" id="6_x63gq"]
[ext_resource type="PackedScene" uid="uid://boncph2tspg8h" path="res://scenes/new_day_transition.tscn" id="7_mgqsj"]
[ext_resource type="Texture2D" uid="uid://blthrj8qx5trs" path="res://sprites/Elevator.png" id="8_05ix8"]
[ext_resource type="Texture2D" uid="uid://h2yv40bbu2fe" path="res://sprites/Crystal1_Dirty.png" id="9_as1ye"]
[ext_resource type="PackedScene" uid="uid://ca35owkrgucnu" path="res://dialogue/dialogue_player_crystal.tscn" id="10_pxplp"]
[ext_resource type="PackedScene" uid="uid://crycv4u8ohmdr" path="res://timers/progress_bar.tscn" id="10_t0fx6"]

[node name="crystalRoom" type="Node2D"]
script = ExtResource("1_iejj8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 408.0
offset_bottom = 218.0
scale = Vector2(3, 3)
size_flags_horizontal = 4
color = Color(1, 0.745098, 0.0705882, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 4375.0
offset_bottom = 2275.0
scale = Vector2(0.275, 0.285)
texture = ExtResource("2_5ic37")

[node name="Ben" parent="." instance=ExtResource("3_p2phy")]
position = Vector2(338, 338)
scale = Vector2(0.2, 0.2)

[node name="ClockTimer" parent="." instance=ExtResource("4_i0q6g")]
position = Vector2(1057, 102)

[node name="inventory" parent="." instance=ExtResource("6_x63gq")]
visible = false
position = Vector2(350, 312)
scale = Vector2(2, 2)

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 4375.0
offset_bottom = 2275.0
scale = Vector2(0.275, 0.285)
texture = ExtResource("8_05ix8")

[node name="TextureRect3" type="TextureRect" parent="."]
offset_right = 4375.0
offset_bottom = 2275.0
scale = Vector2(0.275, 0.285)
texture = ExtResource("9_as1ye")

[node name="ProgressBar" parent="." instance=ExtResource("10_t0fx6")]
scale = Vector2(0.5, 0.5)

[node name="tasks" type="TextEdit" parent="."]
offset_left = 8.0
offset_top = 107.0
offset_right = 366.0
offset_bottom = 221.0
theme_override_font_sizes/font_size = 40

[node name="RigidBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="RigidBody2D"]
polygon = PackedVector2Array(24, 549, 139, 474, 251, 543, 141, 619)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RigidBody2D"]
polygon = PackedVector2Array(-1, 530, 1, 650, 960, 650, 1202, 499, 1225, 500, 1225, 665, -29, 669, -30, 535)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
position = Vector2(-2, -193)
polygon = PackedVector2Array(0, 523, 529, 205, 576, 261, 674, 265, 740, 225, 762, 233, 767, 185, 809, 154, 960, 244, 965, 352, 1016, 385, 1056, 436, 1031, 427, 1009, 445, 1007, 471, 1110, 524, 1166, 522, 1200, 502, 1204, -1, 0, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(690, 361, 788, 421, 825, 400, 883, 403, 962, 360, 965, 246, 808, 153, 766, 181, 768, 227, 730, 250, 727, 289, 691, 312)

[node name="pauseMenu" parent="." instance=ExtResource("5_koav6")]
visible = false
anchors_preset = -1
offset_left = 2250.0
offset_top = 1500.0
offset_right = 2250.0
offset_bottom = 1500.0
scale = Vector2(6, 6)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="inventory2" parent="." instance=ExtResource("6_x63gq")]
visible = false
position = Vector2(350, 312)
scale = Vector2(2, 2)

[node name="crystals" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="crystals"]
polygon = PackedVector2Array(681, 648, 648, 605, 656, 583, 680, 580, 707, 614, 688, 529, 719, 498, 761, 512, 777, 583, 790, 528, 818, 520, 841, 539, 821, 648)

[node name="DialoguePlayerCrystal" parent="." instance=ExtResource("10_pxplp")]

[node name="NewDayTransition" parent="." instance=ExtResource("7_mgqsj")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="crystals" to="." method="_on_crystals_body_entered"]
